tests/netedit/basic/configs/netecfg/load/invalid/datas/log.netedit
Error: Cannot read file 'dummy.dat.xml'!
Error: Loading of dummy.dat.xml failed.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
